# agentic_rag

./: .env  .gitignore  auto_setup.bat  installer.iss  langgraph.json  main.py  pyproject.toml  result.json  setup.py  test_backend.py  test_headings_issue.py  test_headings_refactor.py  test_import.py  test_reparse.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
app/: __init__.py  agent.py  agent_graph.py  api.py  dummy_agent.py  prompts.py  protocol.py  schemas.py  server.py  sql_agent.py  sql_tools.py  tools.py  ui.py
backend/agents/: graph.py  rag_agent.py  sql_agent.py
backend/api/: main.py  models.py
backend/config/: settings.py
backend/entrypoints/: server.py  ui.py
backend/kb/: __init__.py  embeddings.py  ingestion.py  knowledge_base.py  rerank.py  types.py  vector_store.py
backend/prompts/: system.py
backend/protocols/: streaming.py
backend/services/: kb_service.py
backend/tools/: runtime.py  sql.py
data/sql/: demo.db
frontend/agui-vue/: package-lock.json
kb/: __init__.py  embeddings.py  ingestion.py  knowledge_base.py  vector_store.py
kb/splitters/: __init__.py  adaptive.py  base.py  headings.py  normal.py  table.py  (+6 more)
langsmith/: __init__.py  run_helpers.py  run_trees.py  utils.py
setup/: installer.iss  setup.py
test/: kb_viewer.py  test_agent_export.py  test_agent_structured.py  test_ingest_pdf.py  test_read_excel.py  test_read_persisted.py  test_search_vectors.py  test_sql_agent_sqlite.py
tests/: test_agent_export.py  test_agent_structured.py  test_api_routes.py  test_chat_stream.py  test_ingest_pdf.py  test_read_chm.py  test_read_persisted.py  test_search_vectors.py  test_sql_agent_sqlite.py
开发计划/: 中间件规划.md
(+88 files in other folders)
