[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "copilotkit==0.1.49",
    "langchain==0.3.21",
    "langgraph==0.4.8",
    "langsmith==0.3.18",
    "openai>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "sentence-transformers>=2.6.0",
    "numpy>=1.26",
    "langchain-deepseek>=0.1.0",
    "langchain-openai>=0.2.0",
    "ag-ui-langgraph>=0.0.21",
]
