[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python=">=3.13"
dependencies = [
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.0",
    "pypdf>=4.0.0",
    "sentence-transformers>=2.6.0",
    "numpy>=1.26",
    "langchain-deepseek>=1.0.1",
    "copilotkit>=0.1.72",
    "langchain>=1.1.0",
    "langgraph>=1.0.4",
    "langsmith>=0.4.46",
    "openai>=2.8.1",
    "fastapi>=0.115.14",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.2.1",
]

