[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python=">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.3",
    "pypdf>=4.0.0",
    "sentence-transformers>=2.6.0",
    "numpy>=1.26",
    "langgraph-cli[inmem]>=0.4.7",
    "python-dotenv>=1.2.1",
    "langchain>=1.1.0",
    "langchain-deepseek>=1.0.1",
    "fastapi>=0.122.1",
    "uvicorn>=0.38.0",
    "jiter==0.5.0",
    "charset-normalizer>=3.3.2",
]
